--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>createx</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="wrapper">
+        <div class="left">
+          <h4 class="left__logo"><a href="">CREATE</a></h4>
+
+          <ul class="menu">
+            <li class="menu__list">
+              <a href="" class="menu__link">About Us</a>
+            </li>
+            <li class="menu__list">
+              <a href="" class="menu__link">Services</a>
+            </li>
+            <li class="menu__list"><a href="" class="menu__link">Work</a></li>
+            <li class="menu__list"><a href="" class="menu__link">News</a></li>
+            <li class="menu__list">
+              <a href="" class="menu__link">Contacts</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="right">
+          <img src="/image/header/telef.svg" alt="telefhone" /
+          class="right__image">
+
+          <div class="right__telef">
+            <a href="" class="right__link">Call us</a>
+            <a href="tel:+4055550128" class="right__sending">(405) 555-0128</a>
+          </div>
+
+          <img
+            src="/image/header/Chat.svg"
+            alt="message"
+            class="right__img"
+            s
+          />
+
+          <div class="right__address">
+            <a href="" class="right__link">Talk to us</a>
+            <a href="mailto:hello@createx.com" class="right__sending"
+              >hello@createx.com</a
+            >
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="section">
+      <div class="wrapper">
+        <div class="section__conteiner">
+          <h1 class="section__title">CREATEX CONSTRUCTION</h1>
+          <p class="section__title">
+            Cras ultrices leo vitae non viverra. Fringilla nisi quisque
+            consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis
+            purus eget pellentesque integer ipsum elementum felis.
+          </p>
+          <div class="button">
+            <button class="button__btn">
+              <a href="">LEARN MORE ABOUT US</a>
+            </button>
+            <button class="button__btn button__btn--actives">
+              <a href="">SUBMIT REQUEST</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
