--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
   <body>
     <header class="header">
       <div class="wrapper">
+        <!--Menu Hamburher-->
+        <div class="hamburger">
+          <div class="hamburger__menu">
+            <span class="namburger__hamburh"></span>
+            <span class="namburger__hamburh"></span>
+            <span class="namburger__hamburh"></span>
+          </div>
+        </div>
+
+        <div class="hamburg">
+          <nav>
+            <ul class="hamburg__links">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Work</a></li>
+              <li><a href="#">News</a></li>
+            </ul>
+          </nav>
+        </div>
+
         <div class="left">
           <h4 class="left__logo"><a href="">CREATE</a></h4>
 
@@ -34,23 +54,24 @@
         </div>
 
         <div class="right">
-          <img src="/image/header/telef.svg" alt="telefhone" /
-          class="right__image">
+          <a
+            href="
+          "
+            ><img src="/image/header/telef.svg" alt="telefhone" /
+            class="right__image"></a
+          >
 
           <div class="right__telef">
-            <a href="" class="right__link">Call us</a>
+            <p class="right__description">Call us</p>
             <a href="tel:+4055550128" class="right__sending">(405) 555-0128</a>
           </div>
 
-          <img
-            src="/image/header/Chat.svg"
-            alt="message"
-            class="right__img"
-            s
-          />
+          <a href=""
+            ><img src="/image/header/Chat.svg" alt="message" class="right__img"
+          /></a>
 
           <div class="right__address">
-            <a href="" class="right__link">Talk to us</a>
+            <p class="right__description">Talk to us</p>
             <a href="mailto:hello@createx.com" class="right__sending"
               >hello@createx.com</a
             >
@@ -62,8 +83,8 @@
     <div class="section">
       <div class="wrapper">
         <div class="section__conteiner">
-          <h1 class="section__title">CREATEX CONSTRUCTION</h1>
-          <p class="section__title">
+          <h1 class="section__title">CREATE<span>X</span> CONSTRUCTION</h1>
+          <p class="section__text">
             Cras ultrices leo vitae non viverra. Fringilla nisi quisque
             consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis
             purus eget pellentesque integer ipsum elementum felis.
@@ -72,10 +93,17 @@
             <button class="button__btn">
               <a href="">LEARN MORE ABOUT US</a>
             </button>
-            <button class="button__btn button__btn--actives">
+            <button class="button__btn button__btn--active">
               <a href="">SUBMIT REQUEST</a>
             </button>
           </div>
+        </div>
+
+        <div class="section__scroll">
+          <h3></h3>
+          <h3></h3>
+          <h3></h3>
+          <h3></h3>
         </div>
       </div>
     </div>
