--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
     <header class="header">
       <div class="wrapper">
         <!--Menu Hamburher-->
-        <div class="hamburger">
-          <div class="hamburger__menu">
-            <span class="namburger__hamburh"></span>
-            <span class="namburger__hamburh"></span>
-            <span class="namburger__hamburh"></span>
+        <div class="burger">
+          <div class="burger__block">
+            <div class="burger__menu">
+              <span class="burger__hamburh"></span>
+              <span class="burger__hamburh"></span>
+              <span class="burger__hamburh"></span>
+            </div>
           </div>
-        </div>
 
-        <div class="hamburg">
-          <nav>
-            <ul class="hamburg__links">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Work</a></li>
-              <li><a href="#">News</a></li>
-            </ul>
-          </nav>
+          <div class="burg">
+            <nav>
+              <ul class="burg__links">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
 
         <div class="left">
@@ -93,17 +95,17 @@
             <button class="button__btn">
               <a href="">LEARN MORE ABOUT US</a>
             </button>
-            <button class="button__btn button__btn--active">
+            <button class="button__btn button__btn--orange">
               <a href="">SUBMIT REQUEST</a>
             </button>
           </div>
         </div>
 
         <div class="section__scroll">
-          <h3></h3>
-          <h3></h3>
-          <h3></h3>
-          <h3></h3>
+          <a href="" class="section__link">01</a>
+          <a href="" class="section__link">02</a>
+          <a href="" class="section__link">03</a>
+          <a href="" class="section__link">04</a>
         </div>
       </div>
     </div>
