--- a/index.html
+++ b/index.html
@@ -15,27 +15,7 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <!--Menu Hamburher-->
-        <div class="burger">
-          <div class="burger__block">
-            <div class="burger__menu">
-              <span class="burger__hamburh"></span>
-              <span class="burger__hamburh"></span>
-              <span class="burger__hamburh"></span>
-            </div>
-          </div>
-
-          <div class="burg">
-            <nav>
-              <ul class="burg__links">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">News</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
+        <!--Menu burher-->
 
         <div class="left">
           <h4 class="left__logo"><a href="">CREATE</a></h4>
@@ -99,6 +79,24 @@
               <a href="">SUBMIT REQUEST</a>
             </button>
           </div>
+        </div>
+
+        <div class="arrow arrow--opacity">
+          <a href="" class="arrow__link"
+            ><img
+              src="/image/section/arrowleft.svg"
+              alt="arrowrleft"
+              class="arrow__image"
+          /></a>
+        </div>
+
+        <div class="arrow">
+          <a href="" class="arrow__link"
+            ><img
+              src="/image/section/arrowright.svg"
+              alt="arrowright"
+              class="arrow__image"
+          /></a>
         </div>
 
         <div class="section__scroll">
