--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <!--Menu burher-->
-
         <div class="left">
           <h4 class="left__logo"><a href="">CREATE</a></h4>
 
@@ -33,6 +31,11 @@
               <a href="" class="menu__link">Contacts</a>
             </li>
           </ul>
+        </div>
+
+        <!--иконка бургерменю-->
+        <div class="burger">
+          <span class="burger__line"></span>
         </div>
 
         <div class="right">
@@ -107,6 +110,11 @@
         </div>
       </div>
     </div>
+
+    <div class="overview">
+      <div class="wrapper"></div>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
