--- a/index.html
+++ b/index.html
@@ -112,7 +112,68 @@
     </div>
 
     <div class="overview">
-      <div class="wrapper"></div>
+      <div class="wrapper">
+        <div class="overview__construction">
+          <h3 class="overview__title">We are Createx Construction Bureau</h3>
+          <p class="overview__text">
+            We are rightfully considered to be the best construction company in
+            the USA.
+          </p>
+        </div>
+
+        <div class="overview__conteiner">
+          <div class="overview__button">
+            <a href="" class="overview__link"
+              ><img
+                src="/image/overview/reproduce.svg"
+                alt="reproduce"
+                class="overview__img"
+            /></a>
+          </div>
+          <div class="overview__button overview__button--btn">
+            <a href="" class="overview__link"
+              ><img
+                src="/image/overview/volume.svg"
+                alt="reproduce"
+                class="overview__img overview__img--volume"
+            /></a>
+          </div>
+        </div>
+
+        <div class="overview__content">
+          <div class="overview__construction">
+            <h3 class="overview__title">Our core values</h3>
+            <p class="overview__text">
+              Our mission is to set the highest standards for construction
+              sphere.
+            </p>
+          </div>
+
+          <div class="overview__table">
+            <div class="overview__grid">
+              <a href=""
+                ><img src="/image/overview/first.svg" alt="quality"
+              /></a>
+              <h4>Quality</h4>
+              <p>
+                Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam
+                velit nostrud aliquip sunt.
+              </p>
+            </div>
+            s
+            <div class="overview__grid">
+              <a href=""
+                ><img src="/image/overview/average.svg" alt="safery"
+              /></a>
+            </div>
+            <div class="overview__grid">
+              <a href=""
+                ><img src="/image/overview/last.svg" alt="comfort"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/main.js"></script>
