--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       </div>
     </div>
 
+    <!--Global Block Discription-->
     <div class="overview">
       <div class="wrapper">
         <div class="overview__construction">
@@ -130,16 +131,16 @@
                 class="overview__img"
             /></a>
           </div>
-          <div class="overview__button overview__button--btn">
-            <a href="" class="overview__link"
-              ><img
-                src="/image/overview/volume.svg"
-                alt="reproduce"
-                class="overview__img overview__img--volume"
-            /></a>
-          </div>
+          <div class="overview__button overview__button--btn"></div>
+          <a href="" class="overview__volume"
+            ><img
+              src="/image/overview/volume.svg"
+              alt="reproduce"
+              class="overview__img overview__img--volume"
+          /></a>
         </div>
 
+        <!--Global Block Discription-->
         <div class="overview__content">
           <div class="overview__construction">
             <h3 class="overview__title">Our core values</h3>
@@ -149,8 +150,9 @@
             </p>
           </div>
 
+          <!--Global Block Cart-->
           <div class="overview__table">
-            <div class="overview__grid">
+            <div class="overview__cart">
               <a href=""
                 ><img src="/image/overview/first.svg" alt="quality"
               /></a>
@@ -160,16 +162,26 @@
                 velit nostrud aliquip sunt.
               </p>
             </div>
-            s
-            <div class="overview__grid">
+
+            <div class="overview__cart">
               <a href=""
                 ><img src="/image/overview/average.svg" alt="safery"
               /></a>
+              <h4>Safety</h4>
+              <p>
+                Anim reprehenderit sint voluptate exercitation adipisicing
+                laborum adipisicing. Minim empor est ea.
+              </p>
             </div>
-            <div class="overview__grid">
+            <div class="overview__cart">
               <a href=""
                 ><img src="/image/overview/last.svg" alt="comfort"
               /></a>
+              <h4>Comfort</h4>
+              <p>
+                Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit
+                voluptate ullamco proident ea ad.
+              </p>
             </div>
           </div>
         </div>
