--- a/index.html
+++ b/index.html
@@ -188,6 +188,33 @@
       </div>
     </div>
 
+    <div class="services">
+      <div class="wrapper">
+        <!--Global Block Area Input-->
+        <div class="services__wrap">
+          <div class="services__absolute">
+            <div class="services__discription">
+              <p>Want to know more? Ask us a question:</p>
+            </div>
+
+            <div class="services__form">
+              <div class="services__dial">
+                <div class="services__cart"></div>
+                <div class="services__cart"></div>
+                <div class="services__cart services__cart--message"></div>
+              </div>
+
+              <div class="button">
+                <button class="button__btn button__btn--orange">
+                  <a href="">SEND</a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
