--- a/index.html
+++ b/index.html
@@ -191,24 +191,47 @@
     <div class="services">
       <div class="wrapper">
         <!--Global Block Area Input-->
-        <div class="services__wrap">
-          <div class="services__absolute">
-            <div class="services__discription">
-              <p>Want to know more? Ask us a question:</p>
+
+        <div class="services__absolute">
+          <div class="services__discription">
+            <p>Want to know more? Ask us a question:</p>
+          </div>
+
+          <div class="services__form">
+            <div class="services__example">
+              <div class="services__cart">
+                <p>Name</p>
+                <input
+                  type="text"
+                  placeholder="Your name"
+                  class="services__input"
+                  required=""
+                />
+              </div>
+              <div class="services__cart">
+                <p>Phone</p>
+                <input
+                  type="text"
+                  placeholder="Your phone"
+                  class="services__input"
+                  required=""
+                />
+              </div>
+              <div class="services__cart">
+                <p>Message</p>
+                <input
+                  type="text"
+                  placeholder="Your message"
+                  class="services__input services__input--message"
+                  required=""
+                />
+              </div>
             </div>
 
-            <div class="services__form">
-              <div class="services__dial">
-                <div class="services__cart"></div>
-                <div class="services__cart"></div>
-                <div class="services__cart services__cart--message"></div>
-              </div>
-
-              <div class="button">
-                <button class="button__btn button__btn--orange">
-                  <a href="">SEND</a>
-                </button>
-              </div>
+            <div class="button">
+              <button class="button__btn button__btn--orange">
+                <a href="">SEND</a>
+              </button>
             </div>
           </div>
         </div>
