--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     <div class="services">
       <div class="wrapper">
         <!--Global Block Area Input-->
+        wewewewe qwewe device-widthwdwdw dfdf
 
         <div class="services__absolute">
           <div class="services__discription">
