--- a/index.html
+++ b/index.html
@@ -186,13 +186,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>s
 
     <div class="services">
       <div class="wrapper">
         <!--Global Block Area Input-->
-        wewewewe qwewe device-widthwdwdw dfdf
-
         <div class="services__absolute">
           <div class="services__discription">
             <p>Want to know more? Ask us a question:</p>
@@ -236,9 +234,54 @@
             </div>
           </div>
         </div>
+
+        <!--Global Block Discription-->
+        <div class="overview__content">
+          <div class="overview__construction">
+            <h3 class="overview__title">Our services</h3>
+            <p class="overview__text">
+              Createx Construction Bureau is a construction giant with a full range of construction services.
+            </p>
+          </div>
       </div>
+
+      <div class="services__content">
+        <div class="services__block">
+          <img src="image/services/Vector1.svg" alt="construction" class="services__image">
+          <a href="">Construction</a>
+        </div>
+
+         <div class="services__block services__block--development">
+          <img src="image/services/Vector2.svg" alt="construction" class="services__image services__image--bott">
+          <a href="">Project Development</a>
+        </div>
+
+         <div class="services__block services__block--background">
+            <img src="image/services/Vector3.svg" alt="construction" class="services__image">
+          <a href="">Interior Design</a>
+        </div>
+
+         <div class="services__block">
+          <img src="image/services/Vector4.svg" alt="construction" class="services__image">
+          <a href="">Repairs</a>
+        </div>
+      </div>
+
+      
+          <div class="services__scroll">
+            <div class="wrapper">
+              <h3 class="services__tx">Learn more about our services</h3>
+              <div class="button">
+                <button class="button__btn button__btn--orange">
+                  <a href="">VIEW SERVICES</a>
+                </button>
+              </div>
+            </div>
+          </div>
     </div>
 
-    <script src="js/main.js"></script>
+ 
+
+   <script src="js/main.js"></script>
   </body>
 </html>
