--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-    </div>s
+    </div>
 
     <div class="services">
       <div class="wrapper">
@@ -240,48 +240,128 @@
           <div class="overview__construction">
             <h3 class="overview__title">Our services</h3>
             <p class="overview__text">
-              Createx Construction Bureau is a construction giant with a full range of construction services.
+              Createx Construction Bureau is a construction giant with a full
+              range of construction services.
             </p>
           </div>
-      </div>
-
-      <div class="services__content">
-        <div class="services__block">
-          <img src="image/services/Vector1.svg" alt="construction" class="services__image">
-          <a href="">Construction</a>
         </div>
 
-         <div class="services__block services__block--development">
-          <img src="image/services/Vector2.svg" alt="construction" class="services__image services__image--bott">
-          <a href="">Project Development</a>
+        <div class="services__content">
+          <div class="services__block">
+            <img
+              src="image/services/Vector1.svg"
+              alt="construction"
+              class="services__image"
+            />
+            <a href="">Construction</a>
+          </div>
+
+          <div class="services__block services__block--development">
+            <img
+              src="image/services/Vector2.svg"
+              alt="construction"
+              class="services__image services__image--bott"
+            />
+            <a href="">Project Development</a>
+          </div>
+
+          <div class="services__block services__block--background">
+            <img
+              src="image/services/Vector3.svg"
+              alt="construction"
+              class="services__image"
+            />
+            <a href="">Interior Design</a>
+          </div>
+
+          <div class="services__block">
+            <img
+              src="image/services/Vector4.svg"
+              alt="construction"
+              class="services__image"
+            />
+            <a href="">Repairs</a>
+          </div>
         </div>
 
-         <div class="services__block services__block--background">
-            <img src="image/services/Vector3.svg" alt="construction" class="services__image">
-          <a href="">Interior Design</a>
-        </div>
-
-         <div class="services__block">
-          <img src="image/services/Vector4.svg" alt="construction" class="services__image">
-          <a href="">Repairs</a>
-        </div>
-      </div>
-
-      
-          <div class="services__scroll">
-            <div class="wrapper">
-              <h3 class="services__tx">Learn more about our services</h3>
-              <div class="button">
-                <button class="button__btn button__btn--orange">
-                  <a href="">VIEW SERVICES</a>
-                </button>
-              </div>
+        <div class="services__scroll">
+          <div class="wrapper">
+            <h3 class="services__tx">Learn more about our services</h3>
+            <div class="button">
+              <button class="button__btn button__btn--orange">
+                <a href="">VIEW SERVICES</a>
+              </button>
             </div>
           </div>
+        </div>
+      </div>
     </div>
 
- 
+    <!--Global Block Work-->
+    <div class="work">
+      <div class="wrapper">
+        <div class="work__top">
+          <div class="work__title">
+            <h3>Browse our selected projects and learn more about our work</h3>
+          </div>
 
-   <script src="js/main.js"></script>
+          <div class="arrow arrow--opacity">
+            <a href="" class="arrow__link"
+              ><img
+                src="/image/section/arrowleft.svg"
+                alt="arrowrleft"
+                class="arrow__image"
+            /></a>
+          </div>
+
+          <div class="arrow">
+            <a href="" class="arrow__link"
+              ><img
+                src="/image/work/line.svg"
+                alt="arrowright"
+                class="arrow__image"
+            /></a>
+          </div>
+        </div>
+
+        <div class="work__average">
+          <div class="work__cart">
+            <img src="image/work/finger.svg" alt="finger" />
+            <a href="#">Red Finger Building</a>
+            <p>Business Centers</p>
+          </div>
+
+          <div class="work__cart">
+            <img src="image/work/cube.svg" alt="finger" />
+            <a href="#">Cubes Building</a>
+            <p>Business Centers</p>
+            <div class="button">
+              <button class="button__btn">
+                <a href="">VIEW PROJECT</a>
+              </button>
+            </div>
+          </div>
+
+          <div class="work__cart">
+            <img src="image/work/pencil.svg" alt="finger" />
+            <a href="#">The Pencil Building</a>
+            <p>Stores & Malls</p>
+          </div>
+        </div>
+
+        <div class="services__scroll">
+          <div class="wrapper">
+            <h3 class="services__tx">Explore all our works</h3>
+            <div class="button">
+              <button class="button__btn">
+                <a href="">VIEW PORTFOLIO</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
