--- a/index.html
+++ b/index.html
@@ -284,14 +284,13 @@
           </div>
         </div>
 
-        <div class="services__scroll">
-          <div class="wrapper">
-            <h3 class="services__tx">Learn more about our services</h3>
-            <div class="button">
-              <button class="button__btn button__btn--orange">
-                <a href="">VIEW SERVICES</a>
-              </button>
-            </div>
+        <!--Global Scroll Work-->
+        <div class="scroll">
+          <h3 class="scroll__tx">Learn more about our services</h3>
+          <div class="button">
+            <button class="button__btn button__btn--orange">
+              <a href="">VIEW SERVICES</a>
+            </button>
           </div>
         </div>
       </div>
@@ -349,14 +348,12 @@
           </div>
         </div>
 
-        <div class="services__scroll">
-          <div class="wrapper">
-            <h3 class="services__tx">Explore all our works</h3>
-            <div class="button">
-              <button class="button__btn">
-                <a href="">VIEW PORTFOLIO</a>
-              </button>
-            </div>
+        <div class="scroll">
+          <h3 class="scroll__tx">Explore all our works</h3>
+          <div class="button">
+            <button class="button__btn">
+              <a href="">VIEW PORTFOLIO</a>
+            </button>
           </div>
         </div>
       </div>
