--- a/index.html
+++ b/index.html
@@ -359,6 +359,81 @@
       </div>
     </div>
 
+    <div class="partners">
+      <div class="wrapper">
+        <div class="top">
+          <div class="top__title">
+            <h3>Supported by 12+ partners</h3>
+          </div>
+
+          <div class="top__conteiner">
+            <div class="top__logo">
+              <img src="image/partners/logo1.svg" alt="logo" />
+            </div>
+
+            <div class="top__logo">
+              <img src="image/partners/logo2.svg" alt="logo" />
+            </div>
+
+            <div class="top__logo">
+              <img src="image/partners/logo3.svg" alt="logo" />
+            </div>
+
+            <div class="top__logo">
+              <img src="image/partners/logo4.svg" alt="logo" />
+            </div>
+
+            <div class="top__logo">
+              <img src="image/partners/logo5.svg" alt="logo" />
+            </div>
+
+            <div class="top__logo">
+              <img src="image/partners/logo6.svg" alt="logo" />
+            </div>
+          </div>
+        </div>
+
+        <div class="partners__bottom">
+          <div class="port">
+            <div class="port__top">
+              <div class="port__title">
+                <h3>What our clients are saying</h3>
+              </div>
+
+              <div class="port__profile">
+                <img src="image/partners/profile.svg" alt="profile" />
+              </div>
+
+              <div class="port__information">
+                <p>
+                  Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum
+                  eiusmod enim. Consectetur magna cillum consequat minim laboris
+                  cillum laboris voluptate minim proident exercitation ullamco.
+                </p>
+              </div>
+            </div>
+
+            <div class="port__bottom">
+              <div class="port__block">
+                <a href="#">Shawn Edwards</a>
+                <p>Position, Company name</p>
+              </div>
+
+              <div class="port__arrow">
+                <a href="#" class="port__link"
+                  ><img src="image/partners/arrowleft.svg" alt="arrow"
+                /></a>
+                <a href="#" class="port__link"
+                  ><img src="image/partners/arrowright.svg" alt="arrow"
+                /></a>
+              </div>
+            </div>
+          </div>
+          <div class="law"></div>
+        </div>
+      </div>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
