--- a/index.html
+++ b/index.html
@@ -368,27 +368,27 @@
 
           <div class="top__conteiner">
             <div class="top__logo">
-              <img src="image/partners/logo1.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo1.svg" alt="logo" /></a>
             </div>
 
             <div class="top__logo">
-              <img src="image/partners/logo2.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo2.svg" alt="logo" /></a>
             </div>
 
             <div class="top__logo">
-              <img src="image/partners/logo3.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo3.svg" alt="logo" /></a>
             </div>
 
             <div class="top__logo">
-              <img src="image/partners/logo4.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo4.svg" alt="logo" /></a>
             </div>
 
             <div class="top__logo">
-              <img src="image/partners/logo5.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo5.svg" alt="logo" /></a>
             </div>
 
             <div class="top__logo">
-              <img src="image/partners/logo6.svg" alt="logo" />
+              <a href=""><img src="image/partners/logo6.svg" alt="logo" /></a>
             </div>
           </div>
         </div>
@@ -423,13 +423,55 @@
                 <a href="#" class="port__link"
                   ><img src="image/partners/arrowleft.svg" alt="arrow"
                 /></a>
-                <a href="#" class="port__link"
+                <a href="#" class="port__link port__link--right"
                   ><img src="image/partners/arrowright.svg" alt="arrow"
                 /></a>
               </div>
             </div>
           </div>
-          <div class="law"></div>
+          <div class="law">
+            <div class="law__image">
+              <img src="image/partners/partners.svg" alt="partners" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="raiting">
+      <div class="wrapper">
+        <div class="raiting__title">
+          <h3>Some facts and figures</h3>
+        </div>
+
+        <div class="raiting__quantity">
+          <div class="raiting__block">
+            <div class="raiting__circle">
+              <p>98%</p>
+            </div>
+            <p class="tit">Totally satisfied clients</p>
+          </div>
+
+          <div class="raiting__block">
+            <div class="raiting__circle raiting__circle--pink">
+              <p>20</p>
+            </div>
+            <p class="tit">Years of experience</p>
+          </div>
+
+          <div class="raiting__block">
+            <div class="raiting__circle raiting__circle--blue">
+              <p>9452</p>
+            </div>
+            <p class="tit">Working hours spent</p>
+          </div>
+
+          <div class="raiting__block">
+            <div class="raiting__circle raiting__circle--green">
+              <p>100%</p>
+            </div>
+            <p class="tit">Succeeded projects</p>
+          </div>
         </div>
       </div>
     </div>
