--- a/index.html
+++ b/index.html
@@ -407,8 +407,9 @@
               <div class="port__information">
                 <p>
                   Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum
-                  eiusmod enim. Consectetur magna cillum consequat minim laboris
-                  cillum laboris voluptate minim proident exercitation ullamco.
+                  eiusmod enim. Consectetur magna cillum consequat minim
+                  <span>laboris cillum laboris voluptate </span>minim proident
+                  exercitation ullamco.
                 </p>
               </div>
             </div>
@@ -440,8 +441,10 @@
 
     <div class="raiting">
       <div class="wrapper">
-        <div class="raiting__title">
-          <h3>Some facts and figures</h3>
+        <div class="top">
+          <div class="top__title">
+            <h3>Some facts and figures</h3>
+          </div>
         </div>
 
         <div class="raiting__quantity">
