--- a/index.html
+++ b/index.html
@@ -452,29 +452,44 @@
             <div class="raiting__circle">
               <p>98%</p>
             </div>
-            <p class="tit">Totally satisfied clients</p>
+            <p class="raiting__tit">Totally satisfied clients</p>
           </div>
 
           <div class="raiting__block">
             <div class="raiting__circle raiting__circle--pink">
               <p>20</p>
             </div>
-            <p class="tit">Years of experience</p>
+            <p class="raiting__tit">Years of experience</p>
           </div>
 
           <div class="raiting__block">
             <div class="raiting__circle raiting__circle--blue">
               <p>9452</p>
             </div>
-            <p class="tit">Working hours spent</p>
+            <p class="raiting__tit">Working hours spent</p>
           </div>
 
           <div class="raiting__block">
             <div class="raiting__circle raiting__circle--green">
               <p>100%</p>
             </div>
-            <p class="tit">Succeeded projects</p>
+            <p class="raiting__tit">Succeeded projects</p>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="construction">
+      <div class="wrapper">
+        <div class="top">
+          <div class="top__title">
+            <h3>Recent news</h3>
+          </div>
+        </div>
+
+        <div class="construction__conteiner">
+          <div class="construction__blockLeft"></div>
+          <div class="construction__blockRight"></div>
         </div>
       </div>
     </div>
