--- a/index.html
+++ b/index.html
@@ -439,57 +439,82 @@
       </div>
     </div>
 
-    <div class="raiting">
-      <div class="wrapper">
-        <div class="top">
-          <div class="top__title">
-            <h3>Some facts and figures</h3>
-          </div>
-        </div>
-
-        <div class="raiting__quantity">
-          <div class="raiting__block">
-            <div class="raiting__circle">
-              <p>98%</p>
+    <div class="position">
+      <div class="raiting">
+        <div class="wrapper">
+          <div class="top">
+            <div class="top__title">
+              <h3>Some facts and figures</h3>
             </div>
-            <p class="raiting__tit">Totally satisfied clients</p>
           </div>
 
-          <div class="raiting__block">
-            <div class="raiting__circle raiting__circle--pink">
-              <p>20</p>
-            </div>
-            <p class="raiting__tit">Years of experience</p>
-          </div>
+          <div class="raiting__quantity">
+            <div class="raiting__block">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <circle
+                  cx="74"
+                  cy="74"
+                  r="71"
+                  fill="transparent"
+                  stroke="#f89828"
+                  stroke-width="6"
+                  stroke-dasharray="512.0796025351362"
+                  stroke-dashoffset="412"
+                  transform="rotate(360 150 150)"
+                  stroke-linecap="round"
+                />
+                <circle
+                  cx="74"
+                  cy="74"
+                  r="71"
+                  fill="transparent"
+                  stroke="#f898284f"
+                  stroke-width="6"
+                />
+              </svg>
 
-          <div class="raiting__block">
-            <div class="raiting__circle raiting__circle--blue">
-              <p>9452</p>
+              <div class="raiting__circle">
+                <p>98%</p>
+              </div>
+              <p class="raiting__tit">Totally satisfied clients</p>
             </div>
-            <p class="raiting__tit">Working hours spent</p>
-          </div>
 
-          <div class="raiting__block">
-            <div class="raiting__circle raiting__circle--green">
-              <p>100%</p>
+            <div class="raiting__block">
+              <div class="raiting__circle raiting__circle--pink">
+                <p>20</p>
+              </div>
+              <p class="raiting__tit">Years of experience</p>
             </div>
-            <p class="raiting__tit">Succeeded projects</p>
+
+            <div class="raiting__block">
+              <div class="raiting__circle raiting__circle--blue">
+                <p>9452</p>
+              </div>
+              <p class="raiting__tit">Working hours spent</p>
+            </div>
+
+            <div class="raiting__block">
+              <div class="raiting__circle raiting__circle--green">
+                <p>100%</p>
+              </div>
+              <p class="raiting__tit">Succeeded projects</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="construction">
-      <div class="wrapper">
-        <div class="top">
-          <div class="top__title">
-            <h3>Recent news</h3>
+      <div class="construction">
+        <div class="wrapper">
+          <div class="top">
+            <div class="top__title">
+              <h3>Recent news</h3>
+            </div>
           </div>
-        </div>
 
-        <div class="construction__conteiner">
-          <div class="construction__blockLeft"></div>
-          <div class="construction__blockRight"></div>
+          <div class="construction__conteiner">
+            <div class="construction__blockLeft"></div>
+            <div class="construction__blockRight"></div>
+          </div>
         </div>
       </div>
     </div>
