--- a/index.html
+++ b/index.html
@@ -450,29 +450,6 @@
 
           <div class="raiting__quantity">
             <div class="raiting__block">
-              <svg xmlns="http://www.w3.org/2000/svg">
-                <circle
-                  cx="74"
-                  cy="74"
-                  r="71"
-                  fill="transparent"
-                  stroke="#f89828"
-                  stroke-width="6"
-                  stroke-dasharray="512.0796025351362"
-                  stroke-dashoffset="412"
-                  transform="rotate(360 150 150)"
-                  stroke-linecap="round"
-                />
-                <circle
-                  cx="74"
-                  cy="74"
-                  r="71"
-                  fill="transparent"
-                  stroke="#f898284f"
-                  stroke-width="6"
-                />
-              </svg>
-
               <div class="raiting__circle">
                 <p>98%</p>
               </div>
@@ -512,8 +489,16 @@
           </div>
 
           <div class="construction__conteiner">
-            <div class="construction__blockLeft"></div>
-            <div class="construction__blockRight"></div>
+            <div class="construction__blockLeft">
+              <div class="construction__workImage">
+                <img src="/image/construction/image1.jpg" alt="work" />
+              </div>
+            </div>
+            <div class="construction__blockRight">
+              <div class="construction__image">
+                <img src="/image/construction/image2.jpg" alt="work" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
