--- a/index.html
+++ b/index.html
@@ -493,6 +493,14 @@
               <div class="construction__workImage">
                 <img src="/image/construction/image1.jpg" alt="work" />
               </div>
+
+              <div class="construction__discription">
+                <h4 class="construction__text">
+                  How to Build Climate Change-Resilent Infrastructure
+                </h4>
+              </div>
+
+              <div class="construction__info"></div>
             </div>
             <div class="construction__blockRight">
               <div class="construction__image">
