--- a/index.html
+++ b/index.html
@@ -489,23 +489,35 @@
           </div>
 
           <div class="construction__conteiner">
-            <div class="construction__blockLeft">
-              <div class="construction__workImage">
+            <div class="constructionCard">
+              <div class="constructionCard__image">
                 <img src="/image/construction/image1.jpg" alt="work" />
               </div>
-
-              <div class="construction__discription">
-                <h4 class="construction__text">
+  
+              <div class="constructionCard__content">
+                <h4 class="constructionCard__title">
                   How to Build Climate Change-Resilent Infrastructure
                 </h4>
-              </div>
 
-              <div class="construction__info"></div>
-            </div>
-            <div class="construction__blockRight">
-              <div class="construction__image">
-                <img src="/image/construction/image2.jpg" alt="work" />
+                <ul class="constructionList">
+                  <li>
+                    <a href="">Industry News</a>
+                  </li>
+                  <li>
+                    <a href="">June 24, 2020</a>
+                  </li>
+                  <li>
+                    <img src="image/construction/message.svg" alt="">
+                    <a href="">4 comments</a>
+                  </li>
+                </ul>
+
+                <p class="constructionCard__desc">
+                  Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...
+                </p>
               </div>
+  
+              <div class="constructionCard__info"></div>
             </div>
           </div>
         </div>
